add setup gulpfile

--- a/css/main.css
+++ b/css/main.css
@@ -1,373 +1,394 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-hr {
+@charset "UTF-8";
+.clearfix,
+.group {
+  zoom: 1; }
+  .clearfix:before, .clearfix:after,
+  .group:before,
+  .group:after {
+    content: "\0020";
     display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
+    height: 0;
+    overflow: hidden; }
+  .clearfix:after,
+  .group:after {
+    clear: both; }
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
+/* Responsive grid
    ========================================================================== */
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px; }
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.row {
+  /*overflow: hidden;*/ }
+
+.column {
+  float: left;
+  padding: 20px; }
+
+/*for gutter set margin left to 4% and first:child to 0px then recalculate percentages*/
+.one {
+  width: 8.33333333%; }
+
+.two {
+  width: 16.66666666%; }
+
+.three {
+  width: 25%; }
+
+.five {
+  width: 41.66666666%; }
+
+.six {
+  width: 50%; }
+
+.seven {
+  width: 58.33333333%; }
+
+.eight {
+  width: 66.66666666%; }
+
+.nine {
+  width: 75%; }
+
+.ten {
+  width: 83.33333333%; }
+
+.eleven {
+  width: 91.66666666%; }
+
+.twelve {
+  width: 100%; }
+
+@media all and (min-width: 600px) {
+  .four {
+    width: 33.33333333%; } }
+
+@font-face {
+  font-family: Gotham_black;
+  src: url(../fonts/GOTHAM-BLACK.TTF); }
+
+@font-face {
+  font-family: Gotham_medium;
+  src: url(../fonts/GOTHAM-MEDIUM.TTF); }
+
+@font-face {
+  font-family: Gotham_thin;
+  src: url(../fonts/GOTHAM-LIGHT.TTF); }
 
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
+  font-family: Gotham_thin, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 100%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Gotham_medium, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
+
+a {
+  color: #1271db; }
+  a:hover, a:focus {
+    text-decoration: none; }
+
+/*
+// Responsive styles if needed
+// @include responsive($big-break) {
+// }
+@include responsive($small-break) {
+  body {
+    font-size: 14px;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin-bottom: 10px;
+  }
+
+  h1 {
+    font-size: 26px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  h4,
+  h5,
+  p,
+  ul,
+  ol {
+    font-size: 14px;
+  }
 }
 
-.wrapper {
-    width: 90%;
-    margin: 0 5%;
-}
+// Mobile first styles if needed
+// @include mobilefirst($big-break) {
+// }
+// @include mobilefirst($small-break) {
+// }
+*/
+.btn {
+  border-radius: 5px;
+  background: transparent;
+  border: 1px solid #1271db;
+  color: #1271db;
+  display: inline-block;
+  height: 44px;
+  outline: none;
+  padding: 0 25px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: capitalize; }
+  .btn:hover, .btn:focus {
+    background: #1271db;
+    border-color: #1271db;
+    color: #fff;
+    text-decoration: none; }
+  .btn:active {
+    background: #0e59ac;
+    border-color: #0e59ac; }
 
-/* ===================
-    ALL: Orange Theme
-   =================== */
+.btn-primary {
+  background-color: #1271db;
+  border-color: #1271db;
+  color: #fff; }
+  .btn-primary:hover, .btn-primary:focus {
+    background: #1065c3;
+    border-color: #1065c3;
+    color: #fff; }
+  .btn-primary:active {
+    background: #0e59ac;
+    border-color: #0e59ac;
+    color: #fff; }
 
-.header-container {
-    border-bottom: 20px solid #e44d26;
-}
+.btn-lg {
+  font-size: 1.4em;
+  height: 66px;
+  padding: 0 60px; }
 
-.footer-container,
-.main aside {
-    border-top: 20px solid #e44d26;
-}
+.btn-sm {
+  font-size: .85em;
+  height: 30.8px;
+  padding: 0 10px; }
 
-.header-container,
-.footer-container,
-.main aside {
-    background: #f16529;
-}
+.btn-link {
+  box-shadow: none;
+  background: transparent;
+  border: 0;
+  color: #1271db;
+  text-shadow: none;
+  text-transform: none; }
+  .btn-link:hover, .btn-link:focus {
+    background: transparent;
+    color: #1271db;
+    text-decoration: underline; }
 
-.title {
-    color: white;
-}
-
-/* ==============
-    MOBILE: Menu
-   ============== */
-
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-nav a {
+@media screen and (max-width: 480px) {
+  .btn {
     display: block;
     margin-bottom: 10px;
-    padding: 15px 0;
+    width: 100%; } }
 
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
+/* Navigation
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/*nav, .navbar-toggle {
+	user-select: none;
+}*/
+.logo {
+  position: fixed;
+  width: 170px;
+  top: 20px;
+  left: 15px;
+  z-index: 25; }
 
-    color: white;
-    background: #e44d26;
-}
-
-nav a:hover,
-nav a:visited {
-    color: white;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-/* ==============
-    MOBILE: Main
-   ============== */
-
-.main {
-    padding: 30px 0;
-}
-
-.main article h1 {
-    font-size: 2em;
-}
-
-.main aside {
-    color: white;
-    padding: 0px 5% 10px;
-}
-
-.footer-container footer {
-    color: white;
-    padding: 20px 0;
-}
-
-/* ===============
-    ALL: IE Fixes
-   =============== */
-
-.ie7 .title {
-    padding-top: 20px;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-
-/* ====================
-    INTERMEDIATE: Menu
-   ==================== */
-
-    nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
-    }
-
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
-    }
-
-/* ========================
-    INTERMEDIATE: IE Fixes
-   ======================== */
-
+nav {
+  position: fixed;
+  z-index: 12;
+  background: #000;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: table;
+  color: #fff; }
+  nav ul {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 0 !important; }
     nav ul li {
-        display: inline;
-    }
+      list-style: none; }
+      nav ul li a {
+        font-size: 35px;
+        text-decoration: none;
+        color: inherit; }
 
-    .oldie nav a {
-        margin: 0 0.7%;
-    }
-}
+.main-nav-hide {
+  display: none; }
 
-@media only screen and (min-width: 768px) {
+/*Hamburger Toggle*/
+.navbar-toggle {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 45px;
+  height: 45px;
+  z-index: 20;
+  cursor: pointer; }
 
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
+.bar-1,
+.bar-2,
+.bar-3 {
+  width: 100%;
+  height: 5px;
+  margin-bottom: 8px;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out; }
 
-    .header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }
+.navbar-on .bar-1,
+.navbar-on .bar-2,
+.navbar-on .bar-3 {
+  background: #fff; }
 
-/* ============
-    WIDE: Menu
-   ============ */
+.navbar-on .bar-1 {
+  transform-origin: 10% 40%;
+  transform: rotate(45deg); }
 
-    .title {
-        float: left;
-    }
+.navbar-on .bar-3 {
+  transform-origin: 10% 40%;
+  transform: rotate(-45deg); }
 
-    nav {
-        float: right;
-        width: 38%;
-    }
+.navbar-on .bar-2 {
+  background: transparent; }
 
-/* ============
-    WIDE: Main
-   ============ */
+* {
+  box-sizing: border-box !important; }
 
-    .main article {
-        float: left;
-        width: 57%;
-    }
+.text-center {
+  text-align: center; }
 
-    .main aside {
-        float: right;
-        width: 28%;
-    }
-}
+.text-right {
+  text-align: right; }
 
-@media only screen and (min-width: 1140px) {
+.text-left {
+  text-align: left; }
 
-/* ===============
-    Maximal Width
-   =============== */
+.clear {
+  clear: both; }
 
-    .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
-    }
-}
+.right {
+  float: right; }
 
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
+.left {
+  float: left; }
 
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
+.list-unstyled {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0; }
 
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
+.valign {
+  vertical-align: middle; }
 
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
+hr {
+  border: 0;
+  border-bottom: 1px solid #ddd;
+  margin: 40px 0; }
 
-.invisible {
-    visibility: hidden;
-}
+.subtle {
+  color: #aaa; }
 
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
+.relative {
+  position: relative; }
 
-.clearfix:after {
-    clear: both;
-}
+html {
+  background: teal; }
 
-.clearfix {
-    *zoom: 1;
-}
+/*Homepage - Main Laning page*/
+.main-landing-page {
+  background: url(../img/test-bg.jpg) no-repeat center center fixed;
+  background-size: cover; }
+  .main-landing-page h1 {
+    font-family: Gotham_black, sans-serif;
+    color: #fff;
+    font-size: 60px;
+    line-height: 98%;
+    margin-left: 65px;
+    margin-bottom: 10px;
+    text-transform: uppercase; }
+  .main-landing-page p {
+    color: #fff;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-left: 65px;
+    font-family: Gotham_medium, sans-serif; }
 
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
+/* About Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.about {
+  background: #c7ad88; }
+
+/* Portfolio Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.work .our-work-banner {
+  height: 400px;
+  width: 100%;
+  background: #3fb0ac; }
+
+.work .our-work {
+  margin-top: -300px;
+  text-align: center; }
+  .work .our-work h1 {
+    text-transform: uppercase;
+    font-size: 55px;
+    margin-bottom: 0; }
+
+.portfolio-item {
+  border: 1px solid blue;
+  height: 320px; }
+
+.footer {
+  background: #252839;
+  color: #fff; }
+
+/*// Responsive styles if needed
+// @include responsive($big-break) {
+// }
+// @include responsive($small-break) {
+// }
+
+// Mobile first styles if needed
+// @include mobilefirst($big-break) {
+// }
+// @include mobilefirst($small-break) {
+// }*/
+@media screen and (max-width: 480px) {
+  body {
+    overflow-x: hidden; } }
 
 @media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+  header,
+  nav,
+  footer {
+    display: none; }
+  img {
+    max-width: 500px; }
+  body {
+    font: 14pt Georgia, "Times New Roman", Times, serif;
+    line-height: 1.3; } }
