--- a/css/sass/pages/_layout.scss
+++ b/css/sass/pages/_layout.scss
@@ -14,6 +14,13 @@
 // @include mobilefirst($small-break) {
 // }
 
+.container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
 
 
 /* HOME */
@@ -52,7 +59,7 @@
 
 /* INTERACTIVE DESIGN */
 
-.interaction {
+.design {
 	background: $pink;
 }
 
