enable toggle color for logo and menu

--- a/css/main.css
+++ b/css/main.css
@@ -210,10 +210,10 @@ nav {
 /*Hamburger Toggle*/
 .navbar-toggle {
   position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 35px;
-  height: 35px;
+  top: 30px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
   z-index: 20;
   cursor: pointer; }
 
@@ -221,26 +221,21 @@ nav {
 .bar-2,
 .bar-3 {
   width: 100%;
-  height: 2px;
-  margin-bottom: 8px;
+  height: 1px;
+  margin-bottom: 6px;
   background-color: #E94444;
   transition: all 0.3s ease-in-out; }
+
+.bar-1 {
+  width: 80%; }
+
+.bar-3 {
+  width: 60%; }
 
 .navbar-on .bar-1,
 .navbar-on .bar-2,
 .navbar-on .bar-3 {
   background: #E94444; }
-
-.navbar-on .bar-1 {
-  transform-origin: 10% 40%;
-  transform: rotate(45deg); }
-
-.navbar-on .bar-3 {
-  transform-origin: 10% 40%;
-  transform: rotate(-45deg); }
-
-.navbar-on .bar-2 {
-  background: transparent; }
 
 * {
   box-sizing: border-box !important; }
@@ -309,6 +304,11 @@ hr {
 /* INTERACTIVE DESIGN */
 .design {
   background: #F15FA8; }
+  .design #bison-logo {
+    width: 70%;
+    fill: transparent;
+    stroke: #fff;
+    transform: translateY(15px); }
 
 /* UX/UI */
 .ux-ui {
