--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -14,7 +14,7 @@
 		img {
 			width: 50%;
 		}
-	display: none;	
+	display: none; 
 }
 
 .logo.active-logo {
@@ -54,10 +54,10 @@ nav {
 
 .navbar-toggle {
 	position: fixed;
-	top: 20px;
-	right: 20px;
-	width: 35px;
-	height: 35px;
+	top: 30px;
+	right: 30px;
+	width: 30px;
+	height: 30px;
 	z-index: 20;
 	cursor: pointer;
 }
@@ -66,11 +66,19 @@ nav {
 .bar-2,
 .bar-3 {
 	width: 100%;
-	height: 2px;
-	margin-bottom: 8px;
+	height: 1px;
+	margin-bottom: 6px;
 	background-color: $salmon;
 	transition: all 0.3s ease-in-out;
 } 
+
+.bar-1 {
+	width: 80%;
+}
+
+.bar-3 {
+	width: 60%;
+}
 
 .navbar-on .bar-1,
 .navbar-on .bar-2, 
@@ -78,19 +86,19 @@ nav {
 	background: $salmon;
 }
 
-.navbar-on .bar-1 {
-	transform-origin: 10% 40%;
-	transform: rotate(45deg);
-}
+// .navbar-on .bar-1 {
+// 	transform-origin: 10% 40%;
+// 	transform: rotate(45deg);
+// }
 
-.navbar-on .bar-3 {
-	transform-origin: 10% 40%;
-	transform: rotate(-45deg);
-}
+// .navbar-on .bar-3 {
+// 	transform-origin: 10% 40%;
+// 	transform: rotate(-45deg);
+// }
 
-.navbar-on .bar-2 {
-	background: transparent;
-}
+// .navbar-on .bar-2 {
+// 	background: transparent;
+// }
 
 
 
