--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -13,6 +13,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
+  color: $reverse;
 }
 
 h1,
@@ -21,6 +22,8 @@ h3,
 h4,
 h5 {
   font-family: $medium, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  color: $reverse;
+  margin: 0px;
 }
 
 
@@ -32,4 +35,60 @@ a {
     text-decoration: none;
   }
 }
+
+/* HOME */
+
+.main-landing-page {
+  background: $dark-blue;
+
+  h1 {
+    font-family: $bold;
+    font-size: 60px;
+    line-height: 98%;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+
+  h1, p {
+    color: $salmon;
+  }
+
+  p {
+    color: $reverse;
+    font-size: 18px;
+    margin-top: 0px;
+    font-family: $medium;
+  }
+
+}
+
+/* INTERACTIVE DESIGN */
+
+
+/* UX/UI */
+.ux-ui {
+  p {
+    font-size: 0.7em;
+    margin-top: 0;
+  }
+  h5 {
+    margin-bottom: 5px;
+    font-family: $medium;
+    text-transform: uppercase;
+  }
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
 
