--- a/css/sass/pages/_layout.scss
+++ b/css/sass/pages/_layout.scss
@@ -14,13 +14,13 @@
 // @include mobilefirst($small-break) {
 // }
 
-.container {
-	// max-width: 960px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+// .container {
+// 	max-width: 960px;
+// 	position: absolute;
+// 	top: 50%;
+// 	left: 50%;
+// 	transform: translate(-50%, -50%);
+// }
 
 
 /* HOME */
@@ -37,25 +37,12 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
-
 	}
 
 	h1, p {
 		color: $salmon;
 	}
-
-
-
 }
-
-	#fp-nav ul li a span, .fp-slidesNav ul li a span {
-		background: $salmon;
-	}
-
-
-
-
-
 
 /* INTERACTIVE DESIGN */
 
@@ -77,11 +64,25 @@
 .ux-ui {
 	background: $salmon;
 
-	.three {
-		text-align: center;
+	.container {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		.screen {
+			text-align: center;
+			float: left;
+			width: 21.25%;
+			margin-left: 3%;
 			img {
-				width:  70%;
+				width: 95%;
 			}
+		}
+		.screen:first-child{
+			margin-left: 0;
+		}
+
 	}
 
 }
