--- a/css/main.css
+++ b/css/main.css
@@ -250,9 +250,22 @@ nav {
   cursor: pointer; }
   .navbar-toggle #menu {
     width: 50px;
-    transform: rotate(180deg); }
-  .navbar-toggle .menu-bar {
-    fill: #E94444; }
+    -webkit-transform: rotate(180deg);
+    /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
+    -ms-transform: rotate(180deg);
+    /* IE 9 */
+    transform: rotate(180deg);
+    /* IE 10, Fx 16+, Op 12.1+ */ }
+  .navbar-toggle .menu-container {
+    width: 40px;
+    height: 15px;
+    overflow: hidden; }
+    .navbar-toggle .menu-container .menu-bar {
+      background: #E94444;
+      width: 40px;
+      height: 1px;
+      margin-bottom: 6px;
+      transform: translateX(10px); }
 
 /*sidebar navigation*/
 #fp-nav ul li a span, .fp-slidesNav ul li a span {
