--- a/css/main.css
+++ b/css/main.css
@@ -225,12 +225,12 @@ nav {
   width: 100%;
   height: 100%;
   text-align: center;
-  display: table;
   color: #fff; }
   nav ul {
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 0 !important; }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
     nav ul li {
       list-style: none; }
       nav ul li a {
@@ -249,13 +249,7 @@ nav {
   z-index: 20;
   cursor: pointer; }
   .navbar-toggle #menu {
-    width: 50px;
-    -webkit-transform: rotate(180deg);
-    /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
-    -ms-transform: rotate(180deg);
-    /* IE 9 */
-    transform: rotate(180deg);
-    /* IE 10, Fx 16+, Op 12.1+ */ }
+    width: 50px; }
   .navbar-toggle .menu-container {
     width: 40px;
     height: 15px;
