--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -22,13 +22,14 @@ nav {
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	display: table;
 	color: #fff;
 
 	ul {
-		display: table-cell;
-		vertical-align: middle;
-		padding-left: 0 !important;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
 			li {
 				list-style: none;
 					a {
@@ -50,19 +51,11 @@ nav {
 	position: fixed;
 	top: 20px;
 	right: 20px;
-	// width: 30px;
-	// height: 30px;
 	z-index: 20;
 	cursor: pointer;
 
 	#menu {
   width:50px;
-  // -webkit-transform: rotate(180deg);
-  // -moz-transform: rotate(180deg);
-  // -o-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg); /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
-      -ms-transform: rotate(180deg); /* IE 9 */
-          transform: rotate(180deg); /* IE 10, Fx 16+, Op 12.1+ */
 	}
 
 	.menu-container {
